setup theme and added font

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,25 +3,25 @@
 @tailwind utilities;
 
 @layer base {
-  h1 {
-    @apply text-2xl;
-  }
-  h2 {
-    @apply text-xl;
-  }
-
-  .btn-blue {
-    @apply py-2 px-4 bg-blue-500 text-white font-semibold rounded-lg shadow-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
+  * {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    @apply focus:ring-4 focus:ring-white focus:outline-none focus:ring-opacity-50;
   }
 
-  /* @font-face {
-    font-family: Proxima Nova;
+  body {
+    @apply bg-bg text-white;
+    font-family: 'Poppins';
+  }
+
+  @font-face {
+    font-family: 'Poppins';
     font-weight: 400;
-    src: url(/fonts/proxima-nova/400-regular.woff) format("woff");
+    src: url('./assets/font/Poppins-Regular.ttf') format('truetype');
   }
   @font-face {
-    font-family: Proxima Nova;
-    font-weight: 500;
-    src: url(/fonts/proxima-nova/500-medium.woff) format("woff");
-  } */
+    font-family: 'Poppins-Bold';
+    font-weight: 700;
+    src: url('./assets/font/Poppins-Bold.ttf') format('truetype');
+  }
 }
