--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -28,7 +28,7 @@
 
 @layer components {
   /* Buton, Input and Select Base styles */
-  .bis_base {
+  .bis-base {
     @apply flex items-center w-full font-bold rounded-[0.625rem] text-lg md:text-2xl cursor-pointer h-[45px] md:h-[60px] transition-colors bg-primary hover:bg-primary-dark active:bg-primary-dark focus:bg-primary-dark text-left px-[15px] md:px-[30px];
   }
 
